--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "fabric": "^2.0.0-rc.3",
+    "mdi-react": "^2.0.46-hotfix.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fabricjs": "^0.1.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
