--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.5",
     "fabric": "^2.0.0-rc.3",
     "mdi-react": "^2.0.46-hotfix.0",
+    "rc-slider": "^8.5.0",
     "react": "^16.2.0",
     "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
