--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
     "react-fabricjs": "^0.1.6",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
